[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/BigBlueTree.png" type="Texture" id=1]
[ext_resource path="res://World/BigBlueTree.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.76359
height = 3.25468

[node name="BigBlueTree" type="Node2D"]
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0
playback_speed = 2.0
playback/speed = 2.0

[node name="BigBlueTreeSprite" type="Sprite" parent="."]
position = Vector2( 0.388692, -55.0078 )
texture = ExtResource( 1 )

[node name="TreeVisibility" type="Area2D" parent="BigBlueTreeSprite"]
position = Vector2( -0.388692, 55.0078 )
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BigBlueTreeSprite/TreeVisibility"]
polygon = PoolVector2Array( -33.9986, -37.1328, -43.5526, -53.5495, -40.4576, -61.3542, -42.0724, -69.6971, -49.7425, -77.7709, -49.8771, -83.4226, -45.9747, -91.0927, -51.2227, -101.589, -49.6079, -114.238, -36.017, -114.507, -19.6003, -103.607, -5.33658, -105.356, 0.0459595, -94.7259, 14.9825, -99.1665, 17.001, -104.145, 27.766, -103.473, 29.919, -111.008, 34.6288, -111.815, 42.2989, -103.473, 46.3358, -99.9739, 47.0086, -90.2853, 47.816, -70.9082, 48.8925, -64.3146, 42.1643, -52.473, 29.5154, -39.6895, 29.3808, -34.9797, 18.212, -31.3465, 3.54461, -19.3704, -4.79832, -19.2358, -16.2362, -26.6368, -24.1755, -35.1143 )

[node name="PlayerCollision" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2( -0.39082, 7.49339 )
rotation = 1.5708
shape = SubResource( 1 )
[connection signal="area_entered" from="BigBlueTreeSprite/TreeVisibility" to="." method="_on_TreeVisibility_area_entered"]
[connection signal="area_exited" from="BigBlueTreeSprite/TreeVisibility" to="." method="_on_TreeVisibility_area_exited"]
